Block-FILE IO Update One