@@ -1,7 +1,5 @@
 package com.yahoo.tracebachi.Executors;
 
-import java.util.List;
-
 import org.bukkit.ChatColor;
 import org.bukkit.World;
 import org.bukkit.block.Block;
@@ -12,21 +10,20 @@ import org.bukkit.entity.Player;
 
 import com.yahoo.tracebachi.Bulldozer;
 import com.yahoo.tracebachi.Utils.BlockGroup;
-import com.yahoo.tracebachi.Utils.SelectionManager.SelBlock;
 
 @SuppressWarnings("deprecation")
 public class Cylinder implements CommandExecutor 
 {
 
 	// Class variables
-	private Bulldozer mainPlugin = null;
+	private Bulldozer core = null;
 	
 	//////////////////////////////////////////////////////////////////////////////////////////////
 	// Method: 	Cylinder Constructor
 	//////////////////////////////////////////////////////////////////////////////////////////////
 	public Cylinder( Bulldozer instance )
 	{	
-		mainPlugin = instance;
+		core = instance;
 	}
 
 	
@@ -50,7 +47,7 @@ public class Cylinder implements CommandExecutor
 				Player cPlayer = (Player) client;
 				World cPlayerWorld = cPlayer.getWorld();
 				String cPlayerName = cPlayer.getName() ;
-				List < SelBlock > cPlayerSelection = mainPlugin.playerSelections.getSelectionFor( cPlayerName );
+				BlockGroup cPlayerSelection = core.playerSelections.getSelectionFor( cPlayerName );
 				BlockGroup blocksToStore = null;
 				Block firstBlock = null;
 				
@@ -72,21 +69,21 @@ public class Cylinder implements CommandExecutor
 				// Check Two: Verify Player has a selection ---------------------------------//
 				if( cPlayerSelection == null )
 				{
-					cPlayer.sendMessage( mainPlugin.ERROR_SELECTION );
+					cPlayer.sendMessage( core.ERROR_SELECTION );
 					return true;
 				}
 				
 				//---------------------------------------------------------------------------//
 				// Check Three: Verify Player Permissions (Send error if false) -------------//
-				if( !(mainPlugin.verifyPerm( cPlayer , "Cylinder" )) )
+				if( !(core.verifyPerm( cPlayer , "Cylinder" )) )
 				{
-					cPlayer.sendMessage( mainPlugin.ERROR_PERM );
+					cPlayer.sendMessage( core.ERROR_PERM );
 					return true;
 				}
 				
 				//---------------------------------------------------------------------------//
 				// Check Four: Set up the data for manipulation -----------------------------//
-				firstBlock = cPlayerSelection.get(0).toStore;
+				firstBlock = cPlayerSelection.getFirst();
 				
 				//---------------------------------------------------------------------------//
 				// Check Five: Verify Valid Values (Parse-able Values) ----------------------//
@@ -95,13 +92,13 @@ public class Cylinder implements CommandExecutor
 					switch( argLen )
 					{
 						case 5:
-							lowOffset = mainPlugin.safeInt( commandArgs[4] , 0 , firstBlock.getY() - 5 );
+							lowOffset = core.safeInt( commandArgs[4] , 0 , firstBlock.getY() - 5 );
 						case 4:
-							height = mainPlugin.safeInt( commandArgs[3] , 0 , 254 - firstBlock.getY() );
+							height = core.safeInt( commandArgs[3] , 0 , 254 - firstBlock.getY() );
 						case 3:
-							cylRadius = mainPlugin.safeInt( commandArgs[2] , 0 , 2000 );
+							cylRadius = core.safeInt( commandArgs[2] , 0 , 2000 );
 						case 2:
-							desiredBlockID = mainPlugin.safeIntList( commandArgs[1] , 0 , 173 );
+							desiredBlockID = core.safeIntList( commandArgs[1] , 0 , 173 );
 							break;
 						default:
 							lowOffset = height = cylRadius = 0 ;
@@ -110,7 +107,7 @@ public class Cylinder implements CommandExecutor
 				}
 				catch( NumberFormatException nfe )
 				{
-					cPlayer.sendMessage( mainPlugin.ERROR_INT );
+					cPlayer.sendMessage( core.ERROR_INT );
 					return true;
 				}
 
@@ -119,7 +116,10 @@ public class Cylinder implements CommandExecutor
 				if( commandArgs[0].equalsIgnoreCase( "-f" ) )
 				{
 					// Make a new group for the player
-					blocksToStore = new BlockGroup();
+					blocksToStore = new BlockGroup( cPlayerWorld );
+					
+					// Revert the selection without clearing the selection
+					cPlayerSelection.revertBlocks( false );
 							
 					// Execute Change ( X = 0 ; Y = 1 ; Z = 2 )
 					setFilledCyl( cPlayerWorld , blocksToStore , 
@@ -128,11 +128,11 @@ public class Cylinder implements CommandExecutor
 							cylRadius , desiredBlockID[0] , (byte) desiredBlockID[1] );
 					
 					// Push the recorded blocks
-					mainPlugin.playerUndo.pushGroupFor( cPlayerName , blocksToStore );
+					core.playerUndo.pushGroupFor( cPlayerName , blocksToStore );
 					blocksToStore = null;
 					
 					// Return for complete
-					cPlayer.sendMessage( ChatColor.GREEN + "[Bulldozer] Filled Cylinder Complete." );
+					cPlayer.sendMessage( core.TAG_POSITIVE + "Filled Cylinder Complete." );
 					return true;
 				}
 				//---------------------------------------------------------------------------//
@@ -140,7 +140,10 @@ public class Cylinder implements CommandExecutor
 				else if( commandArgs[0].equalsIgnoreCase( "-h" ) )
 				{
 					// Make a new group for the player
-					blocksToStore = new BlockGroup();
+					blocksToStore = new BlockGroup( cPlayerWorld );
+					
+					// Revert the selection without clearing the selection
+					cPlayerSelection.revertBlocks( false );
 					
 					// Execute Change ( X = 0 ; Y = 1 ; Z = 2 )
 					setHollowCyl( cPlayerWorld , blocksToStore , 
@@ -149,16 +152,16 @@ public class Cylinder implements CommandExecutor
 							cylRadius , desiredBlockID[0] , (byte) desiredBlockID[1] );
 					
 					// Push the recorded blocks
-					mainPlugin.playerUndo.pushGroupFor( cPlayerName , blocksToStore );
+					core.playerUndo.pushGroupFor( cPlayerName , blocksToStore );
 					blocksToStore = null;
 					
 					// Return for complete
-					cPlayer.sendMessage( ChatColor.GREEN + "[Bulldozer] Hollow Cylinder Complete." );
+					cPlayer.sendMessage( core.TAG_POSITIVE + "Hollow Cylinder Complete." );
 					return true;
 				}
 					
 			}
-			else { client.sendMessage( mainPlugin.ERROR_CONSOLE ); }
+			else { client.sendMessage( core.ERROR_CONSOLE ); }
 		}
 		
 		// Return false by default
